<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">First appli swipe</string>
    <string name="accueil">Welcome on TestApp</string>
    <string name="conversation_page">Conversation</string>
    <string name="phototaken_page">Send your photo</string>
    <string name="username">Login</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Capture">Capture</string>
    <string name="Switch">Switch</string>
    <string name="SendPhoto">Send</string>
    <string name="ReplyPhoto">Reply</string>
    <string name="ClosePhotoTaken">Close</string>
    <string name="title_activity_conversation_list">ConversationList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settingAccueil">Settings page</string>
    <string name="title_activity_display_image_view">DisplayImageView</string>
    <string name="title_activity_display_img">DisplayImgActivity</string>
    <string name="title_activity_after_sending_photo">AfterSendingPhoto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_test">test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_words">test1</string>
    <string name="tab_numbers">test2</string>
    <string name="title_activity_blank_activity">blank_activity</string>



</resources>
